fix: :bug: 修复readme预览图打开时的圆角

--- a/styles/dialog/readme.scss
+++ b/styles/dialog/readme.scss
@@ -62,6 +62,9 @@ $com-radius: get($radius, "large");
     &__preview {
       border-radius: unset;
       margin-bottom: 0;
+      &--fullscreen{
+        border-radius: big.$dialog-radius;
+      }
     }
 
     // Readme正文
