fix: :bug: 修复暗黑模式的菜单项显示问题

--- a/styles/common/function.scss
+++ b/styles/common/function.scss
@@ -25,7 +25,7 @@
 }
 
 @function getRgba($args...) {
-  @return rgba(getCssVar($args...), 1);
+  @return rgba(getCssVar($args...));
 }
 
 @function numToList($num) {
