fix: :bug: 优化页签栏显示和拖拽的兼容逻辑

--- a/styles/layout/top-bar.scss
+++ b/styles/layout/top-bar.scss
@@ -130,9 +130,13 @@ $list: (
     }
   }
 
-  // #drag {
-  //   // color: get($text, "secondary");
-  // }
+  #drag {
+    @include v-center(32px);
+    -webkit-app-region: no-drag;
+    body:has(.layout__empty) & {
+      -webkit-app-region: drag;
+    }
+  }
 
   #windowControls {
     height: $bar-h;
