fix: :bug: 兼容新版底部状态栏

--- a/styles/common/utils.scss
+++ b/styles/common/utils.scss
@@ -55,7 +55,7 @@
   margin: 0;
   padding: math.div($h - $svg-w, 2) math.div($w - $svg-w, 2)
     is-important($important);
-  svg {
+  > svg {
     @include svg($w: $svg-w, $important: $important);
     display: block;
   }
