--- a/styles/panel/full-screen.scss
+++ b/styles/panel/full-screen.scss
@@ -1,4 +1,3 @@
-
 @use "../common" as *;
 @use "../layout/top-bar";
 @use "../panel/block-icons";
@@ -11,13 +10,12 @@ body.body--win32 {
         -webkit-app-region: drag;
       }
 
-      padding: 3px top-bar.$win-control-w * 3 3px 8px;
+      padding: 0 top-bar.$win-control-w * 3 + $fn-space 0 8px;
     }
 
     // 关系图全屏
     > .block__icons {
-      padding: 3px top-bar.$win-control-w * 3 3px 8px;
-      height: block-icons.$icon-w + 3px * 2;
+      padding: 0 top-bar.$win-control-w * 3 + $fn-space 0 8px;
     }
   }
 }
