fix: :bug: 修复页签间隔线未能正常显示的问题

--- a/styles/common/var.scss
+++ b/styles/common/var.scss
@@ -23,6 +23,7 @@ $text: add-css-var($text, "text", $text-types);
 $border: () !default;
 $border: add-color($border, "border", 4);
 $fn-border: 1px solid get($border, 3);
+$fn-border-2: 1px solid get($border, 2);
 
 // 功能色
 $feat-types: "brand", "warning", "error", "success", "info";
