--- a/styles/protyle/inline/link.scss
+++ b/styles/protyle/inline/link.scss
@@ -9,7 +9,7 @@ $text-color: get($text, "secondary");
 .b3-typography a,
 .protyle-wysiwyg [data-node-id] a,
   .protyle-wysiwyg [data-node-id] span[data-type~="a"]:not(:empty) {
-  border-bottom: 1px solid get($border, 2);
+  border-bottom: $fn-border-2;
   text-decoration: none;
   color: $text-color;
   border-radius: unset;
