fix: :bug: 修复readme页面中代码块和行内代码的样式

--- a/styles/protyle/block/code.scss
+++ b/styles/protyle/block/code.scss
@@ -1,4 +1,3 @@
-
 @use "../../common" as *;
 @use "../icons";
 
@@ -15,63 +14,61 @@ $linum-w: 74px;
 }
 
 // 代码块按钮组
-.protyle-wysiwyg {
-  .code-block {
-    .protyle-action {
-      // 代码语言按钮
-      &__language {
-        @include item("base");
-        @include v-center(20px);
+.protyle-wysiwyg .code-block {
+  .protyle-action {
+    // 代码语言按钮
+    &__language {
+      @include item("base");
+      @include v-center(20px);
+      display: inline-flex;
+      text-transform: capitalize;
+      border-radius: get($radius, "base");
+      padding: 0 5px;
+      margin: 4px 0 0 4px !important;
+      font-size: 12px !important;
+
+      // 向下图标
+      &::after {
+        content: "";
         display: inline-flex;
-        text-transform: capitalize;
-        border-radius: get($radius, "base");
-        padding: 0 5px;
-        margin: 4px 0 0 4px !important;
-        font-size: 12px !important;
-
-        // 向下图标
-        &::after {
-          content: "";
-          display: inline-flex;
-          width: 10px;
-          height: 20px;
-          margin-left: 4px;
-          @include add-icon(
-            "expand_more",
-            get($text, "placeholder"),
-            18,
-            "no-repeat center"
-          );
-        }
-      }
-
-      // 代码复制按钮
-      &__copy {
-        @include icons.btn-text(25px, "secondary", 11px, 11px);
-        // 复制文字
-        &::after {
-          content: "Copy";
-        }
-      }
-
-      &__copy,
-      &__menu {
-        @include item("base", 2);
+        width: 10px;
+        height: 20px;
+        margin-left: 4px;
+        @include add-icon(
+          "expand_more",
+          get($text, "placeholder"),
+          18,
+          "no-repeat center"
+        );
       }
     }
 
-    &:hover.protyle-action__language {
-      opacity: 1;
+    // 代码复制按钮
+    &__copy {
+      @include icons.btn-text(25px, "secondary", 11px, 11px);
+      // 复制文字
+      &::after {
+        content: "Copy";
+      }
     }
 
-    &[fold="1"] {
-      height: 36px !important;
-      .protyle-icon {
-        margin-top: 1.5px !important;
-      }
-      .hljs {
-        opacity: 0;
-      }
+    &__copy,
+    &__menu {
+      @include item("base", 2);
+    }
+  }
+
+  &:hover.protyle-action__language {
+    opacity: 1;
+  }
+
+  &[fold="1"] {
+    height: 36px !important;
+    .protyle-icon {
+      margin-top: 1.5px !important;
+    }
+    .hljs {
+      opacity: 0;
     }
   }
 }
@@ -83,7 +80,7 @@ $linum-w: 74px;
     padding: 0;
     background-color: get($bg, "base", 1);
     border-radius: get($radius, "base");
-    font-family:  "Noto Sans SC", "JetBrains Mono";
+    font-family: "Noto Sans SC", "JetBrains Mono";
   }
 
   // 代码区
@@ -110,4 +107,6 @@ $linum-w: 74px;
   }
 }
 
-
+.b3-typography .hljs {
+  background-color: get($bg, "base", 1) !important;
+}
