--- a/styles/layout/top-bar.scss
+++ b/styles/layout/top-bar.scss
@@ -65,10 +65,10 @@ $list: (
   margin-bottom: -$interval;
   border: none;
   -webkit-app-region: drag;
-  padding: 0 3px 0 0;
+  padding-right: 3px;
 
   body.body--win32 & {
-    padding: 0;
+    padding-right: 0;
   }
 
   .toolbar__item {
@@ -158,6 +158,9 @@ $list: (
     @include v-center(32px);
     font-size: 14px;
     -webkit-app-region: no-drag;
+    margin-left: 50px;
+    margin-right: 15px;
+    padding: 0;
     body:has(.layout__empty) & {
       -webkit-app-region: drag;
     }
