fix: :bug: 修改菜单项样式

--- a/styles/component/menu.scss
+++ b/styles/component/menu.scss
@@ -120,6 +120,10 @@ $padding: 6px;
       }
     }
 
+    &[disabled="disabled"] {
+      @include item-disabled();
+    }
+
     // 其他信息
     &--readonly {
       @include list.meta();
